add_executable(ch3_1 ch3_1.cpp)
link_to_library(ch3_1 GLEW)
link_to_library(ch3_1 GLFW3)
link_to_library(ch3_1 OPENGL)

add_executable(ch3_2 ch3_2.cpp)
link_to_library(ch3_2 GLEW)
link_to_library(ch3_2 GLFW3)
link_to_library(ch3_2 OPENGL)

add_executable(ch3_3 ch3_3.cpp)
link_to_library(ch3_3 GLEW)
link_to_library(ch3_3 GLFW3)
link_to_library(ch3_3 OPENGL)

add_executable(ch3_4 ch3_4.cpp)
link_to_library(ch3_4 GLEW)
link_to_library(ch3_4 GLFW3)
link_to_library(ch3_4 OPENGL)

add_executable(ch3_5 ch3_5.cpp)
link_to_library(ch3_5 GLEW)
link_to_library(ch3_5 GLFW3)
link_to_library(ch3_5 OPENGL)
