add_executable(ch4_1 ch4_1.cpp)
link_to_library(ch4_1 GLEW)
link_to_library(ch4_1 GLFW3)
link_to_library(ch4_1 OPENGL)

add_executable(ch4_2 ch4_2.cpp)
link_to_library(ch4_2 GLEW)
link_to_library(ch4_2 GLFW3)
link_to_library(ch4_2 OPENGL)
link_to_library(ch4_2 SOIL)

add_executable(ch4_3 ch4_3.cpp)
link_to_library(ch4_3 GLEW)
link_to_library(ch4_3 GLFW3)
link_to_library(ch4_3 OPENGL)
link_to_library(ch4_3 SOIL)
