add_executable(ch5_1 ch5_1.cpp)
link_to_library(ch5_1 GLEW)
link_to_library(ch5_1 GLFW3)
link_to_library(ch5_1 GLM)
link_to_library(ch5_1 OPENGL)
link_to_library(ch5_1 SOIL)

add_executable(ch5_2 ch5_2.cpp)
link_to_library(ch5_2 GLEW)
link_to_library(ch5_2 GLFW3)
link_to_library(ch5_2 GLM)
link_to_library(ch5_2 OPENGL)
link_to_library(ch5_2 SOIL)

add_executable(ch5_3 ch5_3.cpp)
link_to_library(ch5_3 GLEW)
link_to_library(ch5_3 GLFW3)
link_to_library(ch5_3 GLM)
link_to_library(ch5_3 OPENGL)
link_to_library(ch5_3 SOIL)

add_executable(ex5_1 ex5_1.cpp)
link_to_library(ex5_1 GLEW)
link_to_library(ex5_1 GLFW3)
link_to_library(ex5_1 GLM)
link_to_library(ex5_1 OPENGL)
link_to_library(ex5_1 SOIL)
