add_executable(ch6_1 ch6_1.cpp)
link_to_library(ch6_1 GLEW)
link_to_library(ch6_1 GLFW3)
link_to_library(ch6_1 GLM)
link_to_library(ch6_1 OPENGL)
link_to_library(ch6_1 SOIL)

add_executable(ch6_2 ch6_2.cpp)
link_to_library(ch6_2 GLEW)
link_to_library(ch6_2 GLFW3)
link_to_library(ch6_2 GLM)
link_to_library(ch6_2 OPENGL)
link_to_library(ch6_2 SOIL)
